tests/expectations/compiler/function/function_call_tyc_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372003]: Expected type `i8` but type `u8` was found
    --> compiler-test:16:13
     |
  16 |         x = f1(1u8);
     |             ^^^^^^^
Error [ETYC0372003]: Expected type `i8` but type `u8` was found
    --> compiler-test:20:13
     |
  20 |         y = f3(y, z);
     |             ^^^^^^^^
Error [ETYC0372117]: Expected type `u8` but type `i8` was found.
    --> compiler-test:20:16
     |
  20 |         y = f3(y, z);
     |                ^
"""]
